[gd_scene load_steps=2 format=3 uid="uid://dak3m4n5p6q7r"]

[ext_resource type="Script" uid="uid://cn3rs6j8t561k" path="res://scripts/JoinGame.gd" id="1_join"]

[node name="JoinGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_join")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.3, 0.4, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="IPLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Host IP Address:"
horizontal_alignment = 1

[node name="IPInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "localhost"
placeholder_text = "192.168.1.100"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ConnectButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Connect"

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Back"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -30.0
offset_right = 400.0
offset_bottom = -10.0
grow_vertical = 0
text = "Enter host IP address"
horizontal_alignment = 1
